--- a/Mi_Primer_Programa/build.xml
+++ b/Mi_Primer_Programa/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Mi_Primera_Vez" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Mi_Primera_Vez.</description>
+<project name="Mi_Primer_Programa" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Mi_Primer_Programa.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Mi_Primera_Vez-impl.jar">
+        <target name="run" depends="Mi_Primer_Programa-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
