--- a/Mi_Primer_Programa/nbproject/project.properties
+++ b/Mi_Primer_Programa/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Mi_Primera_Vez.jar
+dist.jar=${dist.dir}/Mi_Primer_Programa.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Mi_Primera_Vez
+dist.jlink.output=${dist.jlink.dir}/Mi_Primer_Programa
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Mi_Primera_Vez
-main.class=mi_primera_vez.Mi_Primera_Vez
+jlink.launcher.name=Mi_Primer_Programa
+main.class=mi_primer_programa.Mi_Primer_Programa
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
