--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /Mi_Primer_Programa/nbproject/private/
+/Mi_Primer_Programa/build/
+/Primeras_Operaciones/nbproject/private/
+/Primeras_Operaciones/build/
