--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /Mi_Primer_Programa/build/
 /Primeras_Operaciones/nbproject/private/
 /Primeras_Operaciones/build/
+/booleano/nbproject/private/
+/booleano/build/
+/1/nbproject/private/
+/P_Booleano/nbproject/private/
+/P_Booleano/build/
+/Primer_Char/nbproject/private/
+/Primer_Char/build/
