--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /Primer_Char/build/
 /Tipado/nbproject/private/
 /Tipado/build/
+/Diferencia_Edad_Si/nbproject/private/
+/Diferencia_Edad_Si/build/
+/P_Booleano/demo/target/
