--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Diferencia_Edad_Si/nbproject/private/
 /Diferencia_Edad_Si/build/
 /P_Booleano/demo/target/
+/Acceso_Mientras_SI/nbproject/private/
+/Acceso_Mientras_SI/build/
