--- a/contadores_basicos/nbproject/project.properties
+++ b/contadores_basicos/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Acceso_Mientras_SI.jar
+dist.jar=${dist.dir}/contadores_basicos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Acceso_Mientras_SI
+dist.jlink.output=${dist.jlink.dir}/contadores_basicos
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Acceso_Mientras_SI
-main.class=Acceso_Mientras_SI.src.Acceso_Mientras_SI
+jlink.launcher.name=contadores_basicos
+main.class=contadores_basicos.Contadores_basicos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
