--- a/Ejercicios 1 año/nbproject/project.properties
+++ b/Ejercicios 1 año/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Java
-main.class=java.Java
+main.class=Primera.Vectores2D
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
