--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /JavaApplication16/nbproject/private/
 /Ejercicios 1 año/nbproject/private/
 /Ejercicios 1 año/build/
+/Interfaces/PrimerJavaFX_PaletaCompleta/nbproject/private/
+/Interfaces/PrimerJavaFX_PaletaCompleta/build/
+/Interfaces/PrimerJavaFX_PaletaCompleta/dist/
+/Interfaces/PrimerJavaFX/nbproject/private/
+/Interfaces/PrimerJavaFX/build/
+/Interfaces/PrimerJavaFX/dist/
